--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'Animals -- Juvenile fiction'
 - !lcsh 'Birds -- Juvenile fiction'
+- GITenberg
 title: The Tale of Reddy Woodpecker
 url: http://www.gutenberg.org/ebooks/43447
